@@ -66,6 +66,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
                     <release>21</release>
                     <target>21</target>
                 </configuration>
